# toylisp-py

./: README.md  pyproject.toml
src/toylisp_py/: __init__.py  __main__.py  lisp.py  lisp_test.py
